[project]
name = "library-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.4",
    "pyyaml>=6.0.2",
    "numpy>=1.24.0",
    "sentence-transformers>=4.1.0",
]

[project.optional-dependencies]
semantic = [
    "sentence-transformers>=2.2.0"
]
